This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

20-Dec-2002 (Lars Duening)  (3.3.337)
  - (actions.c) Throw an error if H_NOTIFY_FAIL hook is missing. This also
      prevents the driver from crashing if the H_SEND_NOTIFY hook is
      defined (reported by Zonk).

18-Dec-2002 (Lars Duening)  (3.3.336)
  - (xalloc.c) The max_malloced tracing forgot to count down the allocated
      size on xfree()s (reported by Dafire).

18-Dec-2002 (Lars Duening)  (3.3.335)
  - (object.c) When calling privilege_violation() for restoring efuns,
      the current object is passed as 'who' argument (suggested by Gnomi).

17-Dec-2002 (Lars Duening)  (3.3.334)
  - (lex, object.c) restore_svalue() did not check if a restored efun was
      overriden by a nomask simul-efun (reported by Gnomi).
  - (comm.c) With pthreads, the driver could crash in remove_interactive()
      when the write_cond was destroyed while the thread was still
      waiting on it (reported by Lee).

16-Dec-2002 (Lars Duening)  (3.3.333)
  - (object.c) restore_map_size() stumbled over closure entries (reported by
      Jason).

16-Dec-2002 (Lars Duening)  (3.3.332)
  - (xalloc.c) Corrected a preprocessor conditional (thanks, Gawain!)

16-Dec-2002 (Lars Duening)  (3.3.331)
  - (xalloc.c) Corrected two small problems (thanks, Guandalug!)

16-Dec-2002 (Lars Duening)  (3.3.330)
  - (comm.c) If the login object destructed itself in the logon() call,
      the driver crashed in the print_prompt() routine (reported by Jason).

15-Dec-2002 (Lars Duening)  (3.3.329)
  - (object.c) Corrected a compilation error (thanks, Dafire and Jason!).

15-Dec-2002 (Lars Duening)  (3.3.328)
  - (prolang.y) It is no longer possible to defined a variable to be
      of type 'void' (reported by Gnomi).

14-Dec-2002 (Lars Duening)  (3.3.327)
  - (xalloc, smalloc, sysmalloc, gcollect, dependent files) Cleaned up the