@@ -37,12 +37,12 @@
 ;; TODO:: replace-program and the saving/storing of lfun closure values.
 ;; TODO:: Is this desirable anyway?
               
-(Project-Version lpmud 3-3 337)
-(Parent-Version lpmud 3-3 336)
-(Version-Log "Throw an error if the H_NOTIFY_FAIL hook is missing.")
+(Project-Version lpmud 3-3 338)
+(Parent-Version lpmud 3-3 337)
+(Version-Log "Added workaround for Cygwin optimizer bug.")
 (New-Version-Log
 "")
-(Checkin-Time "Fri, 20 Dec 2002 21:31:54 -0700")
+(Checkin-Time "Fri, 20 Dec 2002 23:35:20 -0700")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -79,7 +79,7 @@
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.8 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.55 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.400 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.401 644))
   (HISTORY (lpmud/f/49_HISTORY 1.292 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.19 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
@@ -127,7 +127,7 @@
   (src/settings/unitopia (lpmud/c/7_unitopia 1.6.1.4.1.14 744))
   (src/settings/wunderland (lpmud/d/24_wunderland 1.3.1.7 744))
 
-  (src/C_COMPILER_BUGS (lpmud/d/21_C_COMPILER 1.6.1.2.1.2 644))
+  (src/C_COMPILER_BUGS (lpmud/d/21_C_COMPILER 1.6.1.2.1.3 644))
 
   ;; Source files
   (src/access_check.h (lpmud/f/48_access_che 1.4 644))
@@ -169,7 +169,7 @@
   (src/interpret.h (lpmud/b/13_interpret. 1.33.1.35 644))
   (src/interpret.c (lpmud/b/14_interpret. 1.125.1.103.1.54.1.8 644))
   (src/lex.h (lpmud/b/11_lex.h 1.16.1.15.1.2 644))
-  (src/lex.c (lpmud/b/12_lex.c 1.62.1.71.1.38 644))
+  (src/lex.c (lpmud/b/12_lex.c 1.62.1.71.1.39 644))
   (src/main.h (lpmud/f/31_main.h 1.14.1.4.1.12 644))
   (src/main.c (lpmud/b/8_main.c 1.60.1.43.1.29 644))
   (src/mapping.h (lpmud/f/30_mapping.h 1.12.1.14 644))
